[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu_UI/Login_Register.gd" type="Script" id=1]

[node name="Login_Register" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 300, 150 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 300, 150 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -20.0
margin_bottom = 20.0
grow_horizontal = 0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labels" type="VBoxContainer" parent="Panel"]
rect_min_size = Vector2( 300, 150 )
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/Labels"]
margin_top = 7.0
margin_right = 300.0
margin_bottom = 21.0
text = "LOGIN/REGISTER"
align = 1

[node name="Emailbox" type="HBoxContainer" parent="Panel/Labels"]
margin_top = 25.0
margin_right = 300.0
margin_bottom = 49.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Emaillabel" type="Label" parent="Panel/Labels/Emailbox"]
margin_left = 53.0
margin_top = 5.0
margin_right = 93.0
margin_bottom = 19.0
text = "EMAIL"

[node name="Email" type="LineEdit" parent="Panel/Labels/Emailbox"]
margin_left = 97.0
margin_right = 247.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
caret_blink = true
caret_blink_speed = 0.5

[node name="Passwordbox" type="HBoxContainer" parent="Panel/Labels"]
margin_top = 53.0
margin_right = 300.0
margin_bottom = 77.0
alignment = 1

[node name="Passwordlabel" type="Label" parent="Panel/Labels/Passwordbox"]
margin_left = 36.0
margin_top = 5.0
margin_right = 109.0
margin_bottom = 19.0
text = "PASSWORD"

[node name="Password" type="LineEdit" parent="Panel/Labels/Passwordbox"]
margin_left = 113.0
margin_right = 263.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )
caret_blink = true
caret_blink_speed = 0.5

[node name="Remember" type="HBoxContainer" parent="Panel/Labels"]
margin_top = 81.0
margin_right = 300.0
margin_bottom = 101.0
alignment = 1

[node name="Rememberme" type="Button" parent="Panel/Labels/Remember"]
margin_left = 51.0
margin_right = 152.0
margin_bottom = 20.0
toggle_mode = true
text = "REMEMBERME"

[node name="Autologin" type="Button" parent="Panel/Labels/Remember"]
margin_left = 156.0
margin_right = 248.0
margin_bottom = 20.0
toggle_mode = true
text = "AUTOLOGIN"

[node name="Buttons" type="HBoxContainer" parent="Panel/Labels"]
margin_top = 105.0
margin_right = 300.0
margin_bottom = 125.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Login" type="Button" parent="Panel/Labels/Buttons"]
margin_left = 85.0
margin_right = 140.0
margin_bottom = 20.0
text = "LOGIN"

[node name="Register" type="Button" parent="Panel/Labels/Buttons"]
margin_left = 144.0
margin_right = 215.0
margin_bottom = 20.0
text = "REGISTER"

[node name="Notification" type="Label" parent="Panel/Labels"]
margin_top = 129.0
margin_right = 300.0
margin_bottom = 143.0
align = 1
[connection signal="pressed" from="Panel/X" to="." method="_on_X_pressed"]
[connection signal="toggled" from="Panel/Labels/Remember/Rememberme" to="." method="_on_Rememberme_toggled"]
[connection signal="toggled" from="Panel/Labels/Remember/Autologin" to="." method="_on_Autologin_toggled"]
[connection signal="pressed" from="Panel/Labels/Buttons/Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="Panel/Labels/Buttons/Register" to="." method="_on_Register_pressed"]
